[package]
name = "qbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-cache-inmemory="0.13"
twilight-gateway="0.13"
twilight-http="0.13"
twilight-model="0.13"
tokio={version="1.21", features=["full"]}
futures-util = { default-features = false, version = "0.3" }
anyhow = { default-features = false, features = ["std"], version = "1" }